DEV: checked network, improved api generateor
